--- a/applications/pisa/sun109.tex
+++ b/applications/pisa/sun109.tex
@@ -1,567 +1,22 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,noabs,nolof]{starlink}
 
 % ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {109.11}
-\newcommand{\stardocauthors}   {Peter W. Draper and Nicholas Eaton}
-\newcommand{\stardocdate}      {23 October 2002}
-\newcommand{\stardoctitle}     { {\Huge PISA} \\ [\latex{2.5ex}]
-                  {\huge Position Intensity and Shape Analysis}}
-\newcommand{\stardocversion}   {2.4-5}
-\newcommand{\stardocmanual}    {[manual-type]}
-\newcommand{\stardocabstract}  {[Text of abstract]}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {109.11}
+\stardocauthors     {Peter W. Draper and Nicholas Eaton}
+\stardocdate        {23 October 2002}
+\stardoctitle       {PISA \\
+                  Position Intensity and Shape Analysis}
+\stardocversion     {2.4-5}
+\stardoccopyright
 {Copyright \copyright\ 2002 Particle Physics and Astronomy Research
   Council}
-
-% ? End of document identification
-% -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-% Internal cross-reference to labels.
-\newcommand{\iref} [1]{\htmlref{#1}{#1}}
-\newcommand{\iiref}[2]{\htmlref{#1}{#2}}
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The commands defined in the style file html.sty provided with LaTeX2html
-%     are used. These should either be made available by using the appropriate
-%     sun.tex (with hypertext extensions) or by putting the file html.sty
-%     on your TEXINPUTS path (and including the name as part of the
-%     documentstyle declaration).
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-%     MJC: Malcolm J. Currie (STARLINK)
-%     DSB: David Berry (STARLINK)
-%     TIMJ: Tim Jenness (JAC)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     1995 October 4 (MJC):
-%        Added goodbreaks and pagebreak[3] in various places to improve
-%        pages breaking before headings, not immediately after.
-%        Corrected banner width.
-%     1996 March 7 (MJC):
-%        Mark document name on both sides of an sstroutine.
-%     2-DEC-1998 (DSB):
-%        Added sstattributetype (copied from sun210.tex).
-%     2004 August 6 (MJC):
-%        Added sstattribute.
-%     21-JUL-2009 (TIMJ):
-%        Added \sstdiylist{}{} as used when a Parameters section is located that
-%        is not "ADAM Parameters".
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \markboth{{\stardocname}~ --- #1}{{\stardocname}~ --- #1}
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-% Frame attributes fount.  Need to find a way for these to stand out.
-% San serif doesn't work by default.  Also without the \rm the
-% san serif continues after \sstatt hyperlinks.  Extra braces
-% failed to prevent \sstattribute from using roman fount for its
-% headings.  The current lash up appears to work, but needs further
-% investigation or a TeX wizard.
-\newcommand{\sstatt}[1]{\sf #1}
-\begin{htmlonly}
-  \newcommand{\sstatt}[1]{\large{\tt #1}}
-\end{htmlonly}
-
-%  Define a command to produce an attribute header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstattribute}[3]{
-   \goodbreak
-   \markboth{{\stardocname}~ --- #1}{{\stardocname}~ --- #1}
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\sstatt #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-4.9pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\sstatt #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\sstatt #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\goodbreak \item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the attribute data type section.
-\newcommand{\sstattributetype}[1]{
-   \item[Type:] \mbox{} \\
-      #1
-}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \goodbreak
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the applicability section.
-\newcommand{\sstapplicability}[1]{
-   \item[Class Applicability:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \goodbreak
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\goodbreak \item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the a generic section as a list
-\newcommand{\sstdiylist}[2]{
-   \item[#1:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #2
-   \end{description}
-}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%  Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstattribute. Note the further level of subsectioning.
-   \newcommand{\sstattribute}[3]{
-      \subsubsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-      \\
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstapplicability
-   \newcommand{\sstapplicability}[1]{%
-      \item[Class Applicability:]
-       \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2\\}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of sst.tex layout definitions.
-%.
-
-
-
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
-%  Title Page.
-%  ===========
-\renewcommand{\thepage}{\roman{page}}
-\begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Science \& Technology Facilities Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-%   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-%   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
 
 % Include a PISAPLOT picture to show what the packages is about.
 % The postscript file sun109_cover.eps is an encapsulated output from
@@ -575,101 +30,22 @@
 %
 % it will be necessary to scale the output in some fashion to a
 % width of around 5 inches. This may be performed using an AGI picture.
+%%\startitlepic{\vskip -20mm\centering\leavevmode\includegraphics[width=4in]{sun109_cover}}
 
-
-%   e.g. \includegraphics[scale=0.3]{filename}
-\centering\leavevmode\includegraphics[width=4in]{sun109_cover}
-% ? End of picture
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\textbf{Abstract}}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-%%      \stardocversion\\
-%%      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename}
-\begin{center}
-\htmladdimg{sun109_main.png}
-\end{center}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.scitech.ac.uk} \\
-      \htmladdnormallink{Science \& Technology Facilities Council}
-                        {http://www.scitech.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
+% ? End of document identification
 % -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-% \stardocabstract
-% ? End of document abstract
+% ? Document specific \providecommand or \newenvironment commands.
 
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
+% Internal cross-reference to labels.
+\providecommand{\iref} [1]{\htmlref{#1}{#1}}
+\providecommand{\iiref}[2]{\htmlref{#1}{#2}}
 
+% ? End of document specific commands
 % -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+%  Title Page.
+%  ===========
+\begin{document}
+\scfrontmatter
 
 \section{Introduction}
 
@@ -702,14 +78,6 @@ simple object classification. The classification is performed by the
 simple thresholding of an additionally generated `peakedness' measure,
 or by the multivariate analysis of a set of intensity corrected
 variables.
-
-\begin{htmlonly}
-{\em Snapshots of a
-\htmladdnormallink{demonstration}{pisa_demo.html}
-of PISA are available. You can also run this
-\htmlref{interactively}{pisa_demo}.}
-\end{htmlonly}
-
 
 \section{Classified listing of routines}
 
@@ -758,9 +126,9 @@ PISA is available as part of the
 \htmladdnormallink{Starlink Software Collection}{http://www.starlink.ac.uk}
 and can be used from \xref{ICL}{sg5}{} and the C-shell. The package is always
 initialised by the command
-\begin{verbatim}
-   # pisa
-\end{verbatim}
+\begin{terminalv}
+# pisa
+\end{terminalv}
 
 after performing the required Starlink initialisations. Note that in this
 document the \verb+#+ sign is used as a generic prompt and should not be typed.
@@ -774,22 +142,22 @@ use of the escape character \verb+\+ or by use of single quotes.
 \subsection{Getting Help}
 
 On-line help is available using the
-\begin{verbatim}
-   # pisahelp
-\end{verbatim}
+\begin{terminalv}
+# pisahelp
+\end{terminalv}
 command from the C-shell. From \xref{ICL}{sg5}{} use the command
-\begin{verbatim}
-   ICL> help pisa
-\end{verbatim}
+\begin{terminalv}
+ICL> help pisa
+\end{terminalv}
 Help can also be obtained at any prompt by specifying ? or ??. Program
 execution can be halted at a prompt by returning the abort command (!!).
 
 \begin{latexonly}
 As an alternative to these approaches this document can be viewed
 on-line using a hypertext browser using the command:
-\begin{verbatim}
-   # showme sun109
-\end{verbatim}
+\begin{terminalv}
+# showme sun109
+\end{terminalv}
 \end{latexonly}
 
 \section{Object detection and parameterisation -- PISAFIND}
@@ -864,20 +232,16 @@ defects and bad pixels.
 Currently \iref{PISAFIND} works with INTEGER data in the range 0 to 32766. An
 array of real data in this range will be accepted by the routine but the
 following message will appear:
-\begin{quote}
-\begin{verbatim}
-   Input NDF is of type _REAL - this application can only process at
-   _WORD precision; significance may be lost
-\end{verbatim}
-\end{quote}
+\begin{terminalv}
+Input NDF is of type _REAL - this application can only process at
+_WORD precision; significance may be lost
+\end{terminalv}
 If the array contains data outside this range the program will abort
 with the following message:
-\begin{quote}
-\begin{verbatim}
-   ! The input NDF contains "bad" pixels or values outside the range of
-     _WORD, these cannot be correctly handled by this application.
-\end{verbatim}
-\end{quote}
+\begin{terminalv}
+! The input NDF contains "bad" pixels or values outside the range of
+  _WORD, these cannot be correctly handled by this application.
+\end{terminalv}
 
 A previous restriction on the size of the input data has been removed,
 however, other limitations still apply. The maximum length of the {\em
@@ -1003,15 +367,15 @@ comparison purposes.
 Perhaps the most likely use of \iref{PISAPLOT} is to overlay a results
 file over a previously displayed image. This is achieved using the
 OVERLAY parameter
-\begin{verbatim}
-   # pisaplot overlay
-\end{verbatim}
+\begin{terminalv}
+# pisaplot overlay
+\end{terminalv}
 
 If the plotting device has an overlay plane then the present contents of
 it may be cleared using the CLEAR parameter
-\begin{verbatim}
-   # pisaplot overlay clear
-\end{verbatim}
+\begin{terminalv}
+# pisaplot overlay clear
+\end{terminalv}
 
 The colours of the plotted ellipses are controlled using the PALNUM
 parameter. If the graphics device allows colour then different pen
@@ -1154,9 +518,9 @@ Any of the PISA output files (from \iref{PISAFIND} and
 [5]}{sun190}{} and the \xref{CATPAC [8]}{sun120}{} packages.
 The easiest way to convert a PISA results file into a catalogue is to
 use the
-\begin{verbatim}
-   # pisa2cat
-\end{verbatim}
+\begin{terminalv}
+# pisa2cat
+\end{terminalv}
 routine. CURSA and CATPAC can be used to perform simple manipulations
 --- operations such as, sorting and subsetting according to various
 criteria.
@@ -1186,9 +550,9 @@ A file called \verb+clustan.dat+ is found in \$PISA\_DIR, take a copy
 of it. It shows how to get data into CLUSTAN, to run it in `batch'
 mode simply change the file names to those of your \iref{PISAFIND}
 data files and type.
-\begin{verbatim}
-   # clustan < clustan.dat
-\end{verbatim}
+\begin{terminalv}
+# clustan < clustan.dat
+\end{terminalv}
 
 \subsection{Object classification}
 
@@ -1341,32 +705,32 @@ it is necessary to protect them by using the escape character or by
 using single quotes around the complete parameter value i.e. use
 \verb+'"a parameter string"'+ or \verb+\"a parameter string\"+ not
 \verb+"a parameter string"+, and
-\verb+'[1,2,3,4]'+  or \verb+\[1,2,3,4\]+ not \verb+[1,2,3,4]+
+\verb+'[1,2,3,4]'+  or \texttt{\textbackslash[1,2,3,4\textbackslash]} not \verb+[1,2,3,4]+
 
 \subsection{Isophotal analysis with deblending}
 
 This example performs isophotal analysis with deblending of overlapped
 images on a frame containing a mixture of stars and galaxies.
 The results are then plotted on a hardcopy device.
-\begin{verbatim}
-   # pisafind
-   IN - NDF containing input image > frame
-     Analysing whole image
-   MINPIX - Minimum pixel size for images (typically 4-16) > 6
-   METHOD - Intensity analysis ( 0=Isophotal, 1=Total, 2=Profile ) > 0
-     Estimated background level =   492.2
-     Background standard deviation =     7.4
-   BACKGROUND - Background (global sky) value /492.17/ >
-   THRESH - Threshold for analysis (data units) > 11.5
+\begin{terminalv}
+# pisafind
+IN - NDF containing input image > frame
+ Analysing whole image
+MINPIX - Minimum pixel size for images (typically 4-16) > 6
+METHOD - Intensity analysis ( 0=Isophotal, 1=Total, 2=Profile ) > 0
+  Estimated background level =   492.2
+  Background standard deviation =     7.4
+BACKGROUND - Background (global sky) value /492.17/ >
+THRESH - Threshold for analysis (data units) > 11.5
 
-     Total number of positive images = 141
-     The results have been written to pisafind.dat
-         and pisasize.dat
+  Total number of positive images = 141
+  The results have been written to pisafind.dat
+      and pisasize.dat
 
-   # pisaplot
-   RESULTS - File of PISAFIND parameterised data /@pisafind/ >
-   DEVICE - Name of graphics device > postscript_p
-\end{verbatim}
+# pisaplot
+RESULTS - File of PISAFIND parameterised data /@pisafind/ >
+DEVICE - Name of graphics device > postscript_p
+\end{terminalv}
 
 \subsection{Plotting overlaid ellipses}
 Using \iref{PISAPLOT} to overlay ellipses is achieved using the OVERLAY and
@@ -1374,26 +738,26 @@ CLEAR parameters. The image over which the plot is to be overlaid should
 have been displayed using the \xref{KAPPA DISPLAY}{sun95}{DISPLAY} or a
 routine which uses \xref{AGI}{sun48}{} to store its graphics information
 (such as \iref{PISAGREY}).
-\begin{verbatim}
-   # display in=frame mode=per percentiles=[1,99] device=xw
-   # pisaplot results=pisafind.dat overlay device=xw
-\end{verbatim}
+\begin{terminalv}
+# display in=frame mode=per percentiles=[1,99] device=xw
+# pisaplot results=pisafind.dat overlay device=xw
+\end{terminalv}
 
 If a device with a suitable overlay is used then the overlay plane may
 be erased prior to the plotting of the ellipses using the CLEAR
 parameter.
-\begin{verbatim}
-   # pisaplot results=pisafind.dat overlay clear device=xov
-\end{verbatim}
+\begin{terminalv}
+# pisaplot results=pisafind.dat overlay clear device=xov
+\end{terminalv}
 
 The colour of the ellipses is controlled using the PALNUM parameter. So
 for instance if one had two lists of results which are separated into
 stars and galaxies for instance (or one could have \iref{PISAFIND} results
 files separated by intensity, ellipticity etc.)
-\begin{verbatim}
-   # pisaplot results=stars.dat overlay palnum=3
-   # pisaplot results=galaxies.dat overlay palnum=4
-\end{verbatim}
+\begin{terminalv}
+# pisaplot results=stars.dat overlay palnum=3
+# pisaplot results=galaxies.dat overlay palnum=4
+\end{terminalv}
 This sequence of commands would result in the data in file
 \verb+stars.dat+ being overlaid and coloured green. The data in file
 \verb+galaxies.dat+ would also be overlaid on the same image and
@@ -1406,32 +770,31 @@ To perform a profile fit a list of the accurate positions of good well
 separated stars are required. One way to get such a list is too use
 the \xref{KAPPA CENTROID}{sun95}{CENTROID} routine to select objects
 from a displayed image.
-\begin{verbatim}
-   # centroid coout=stars.acc mode=cursor mark
-\end{verbatim}
+\begin{terminalv}
+# centroid coout=stars.acc mode=cursor mark
+\end{terminalv}
 The output file \verb+stars.acc+ is of a format suitable for input to
 \iref{PISAFIT}. Running \iref{PISAFIT} allows the determination of the
 best fit to the stars.
-\begin{verbatim}
-   # pisafit
-   IN - NDF containing input image /@frame/ >
-    Analysing whole image
-    Estimated background level =   492.2
-    Background standard deviation =     7.4
-   BACKGROUND - Background (global sky) value /492.2/ >
-   POSITIONS - File containing star positions / / > stars.acc
-   MINMODE - Minimisation bounds mode /'APM'/ >
-   RADIUS - Limiting Radius > 10
-    Number of points in curve fit = 28
+\begin{terminalv}
+# pisafit
+IN - NDF containing input image /@frame/ >
+ Analysing whole image
+ Estimated background level =   492.2
+ Background standard deviation =     7.4
+BACKGROUND - Background (global sky) value /492.2/ >
+POSITIONS - File containing star positions / / > stars.acc
+MINMODE - Minimisation bounds mode /'APM'/ >
+RADIUS - Limiting Radius > 10
+ Number of points in curve fit = 28
 
-    May be having problems with the minimisation, check plot.
-    RMS of fit                 = 2.0545775E-02
-    Gaussian Sigma      (GSIGM)=  2.17
-    % Cross Over        (CROSS)= 30
-    Mixture Coefficient (COMIX)= 0.087
-   AGAIN - Do fit again /TRUE/ > f
-
-\end{verbatim}
+ May be having problems with the minimisation, check plot.
+ RMS of fit                 = 2.0545775E-02
+ Gaussian Sigma      (GSIGM)=  2.17
+ % Cross Over        (CROSS)= 30
+ Mixture Coefficient (COMIX)= 0.087
+AGAIN - Do fit again /TRUE/ > f
+\end{terminalv}
 The parameters controlling other various options are detailed in the
 routine description appendix. Usually the default options (as shown) are
 all that are necessary.
@@ -1441,26 +804,26 @@ application's parameter file. These values are then automatically
 picked up by any other PISA application which requires them. So for
 instance running \iref{PISAFIND} in its profile fitting mode is
 straight-forward after running \iref{PISAFIT}.
-\begin{verbatim}
-   # pisafind
-   IN - NDF containing input image /@frame/ >
-    Analysing whole image
-   MINPIX - Minimum pixel size for images (typically 4-16) / / > 4
-   METHOD - Intensity analysis ( 0=Isophotal, 1=Total, 2=Profile ) /0/ > 2
-   GSIGM - Gaussian sigma (pixels) /2.17146/ >
-   CROSS - Crossover point % of peak /30/ >
-   COMIX - Mixture coefficient /8.7035753E-02/ >
-   UPLIM - Upper intensity limit to use in analysis (saturation) /32767/ >
-   IFULL - Do you want full surface modelling /FALSE/ >
-    Estimated background level =   492.2
-    Background standard deviation =     7.4
-   BACKGROUND - Background (global sky) value /492.17/ >
-   THRESH - Threshold for analysis (data units) /20/ >
+\begin{terminalv}
+# pisafind
+IN - NDF containing input image /@frame/ >
+ Analysing whole image
+MINPIX - Minimum pixel size for images (typically 4-16) / / > 4
+METHOD - Intensity analysis ( 0=Isophotal, 1=Total, 2=Profile ) /0/ > 2
+GSIGM - Gaussian sigma (pixels) /2.17146/ >
+CROSS - Crossover point % of peak /30/ >
+COMIX - Mixture coefficient /8.7035753E-02/ >
+UPLIM - Upper intensity limit to use in analysis (saturation) /32767/ >
+IFULL - Do you want full surface modelling /FALSE/ >
+ Estimated background level =   492.2
+ Background standard deviation =     7.4
+BACKGROUND - Background (global sky) value /492.17/ >
+THRESH - Threshold for analysis (data units) /20/ >
 
-    Total number of positive images = 119
-    The results have been written to pisafind.dat
-        and pisasize.dat
-\end{verbatim}
+ Total number of positive images = 119
+ The results have been written to pisafind.dat
+     and pisasize.dat
+\end{terminalv}
 
 \subsection{Fancy plots}
 
@@ -1470,12 +833,12 @@ It also has parameters controlling the size of the annotations, the
 presence of annotations, the number of tick mark and the thickness of
 the lines. So for instance the plot on the front page of this document
 was produced using the commands.
-\begin{verbatim}
-   # pisafind frame(80:210,115:260) reset accept
-   # pisaplot device=pscript_p pltitl="\fr Objects located by PISAFIND"
-              abslab="\fr X position (pixels)"
-              ordlab="\fr Y position (pixels)" thick=2 annoscale=2.5
-\end{verbatim}
+\begin{terminalv}
+ # pisafind frame(80:210,115:260) reset accept
+ # pisaplot device=pscript_p pltitl="\fr Objects located by PISAFIND"
+           abslab="\fr X position (pixels)"
+           ordlab="\fr Y position (pixels)" thick=2 annoscale=2.5
+\end{terminalv}
 
 Hence the labels were written using a Roman font.
 
@@ -1492,13 +855,13 @@ different apparent brightnesses. The transformations chosen try to
 have the same values for a star of any brightness. Try the following
 sequence of commands.
 
-\begin{verbatim}
-   # pisapeak in=frame finddata=pisafind.dat results=pisapeak.dat
-   # pisacut input=pisapeak.dat column=2 thresh=0.85 lower=stars.indices
-             higher=gals.indices
-   # pisamatch one=stars.indices two=pisafind.dat out=stars.dat
-   # pisamatch one=gals1.indices two=pisafind.dat out=gals.dat
-\end{verbatim}
+\begin{terminalv}
+# pisapeak in=frame finddata=pisafind.dat results=pisapeak.dat
+# pisacut input=pisapeak.dat column=2 thresh=0.85 lower=stars.indices
+         higher=gals.indices
+# pisamatch one=stars.indices two=pisafind.dat out=stars.dat
+# pisamatch one=gals1.indices two=pisafind.dat out=gals.dat
+\end{terminalv}
 
 This example transforms the \iref{PISAFIND} RESULTS file using a model
 stellar profile fit, writing the results to
