pisa: Fix cover graphic in SUN/109
No longer have a different image for HTML version.

--- a/applications/pisa/sun109.tex
+++ b/applications/pisa/sun109.tex
@@ -30,7 +30,7 @@
 %
 % it will be necessary to scale the output in some fashion to a
 % width of around 5 inches. This may be performed using an AGI picture.
-%%\startitlepic{\vskip -20mm\centering\leavevmode\includegraphics[width=4in]{sun109_cover}}
+\startitlepic{\vskip -20mm\centering\includegraphics[width=4in]{sun109_cover}}
 
 % ? End of document identification
 % -----------------------------------------------------------------------------
